# ChangeLog for app-editors/emacs-lexbind
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-lexbind-23.0.9999 (09 Sep 2009)

  09 Sep 2009; Ulrich Mueller <ulm@gentoo.org>
  +emacs-lexbind-23.0.9999.ebuild, +metadata.xml:
  Emacs lexical-binding branch.
