@@ -1,3 +1,3 @@
-EBUILD emacs-lexbind-23.0.9999.ebuild 9473 RMD160 a0d0bd1916479ee475c10719049cda60c4af29f1 SHA1 f7b932e76555b9170836c466e6068e61246c8bc6 SHA256 0c328c8dae103cf93e06e005f3e73ec50822dd496d035c9a0dea4eb93a4b17d0
-MISC ChangeLog 296 RMD160 ad82f4fa6789ca4e7f3fbe227be89bc307039dfc SHA1 40918bb44b0be73f47698acdfc7c0ac62890b1af SHA256 13b62453f62fb891bdd16b4e80202cf2e177a949a8ddb8987eecd058d7d22899
-MISC metadata.xml 1529 RMD160 e40abfeff829d64e9f7d699d4e8fc5c4d6097bb5 SHA1 b2c01905cf0230739a45ad86bfbec800f8562c9f SHA256 b24dbef03ac32c182f69573275d416d664537eee2667e1e8c3199d4d34f3b20e
+EBUILD emacs-lexbind-23.1.9999.ebuild 9607 RMD160 ee2ae88148a0a441b2bde62d4eac6aab2e96c75f SHA1 ea356a78bd1e8c724b02dbe74598027b5b1ae35c SHA256 ef85a94ab32dabb94363ecece8021398ce02c0f262dbbbd1285e7fabdb41def6
+MISC ChangeLog 494 RMD160 50d8b3f3d641d7613727a6d95a25691ed27ddde4 SHA1 9a719363300ba3387647656336410f7b45e5181f SHA256 089f8e52ea4f095b885fef0226c3c5a990cf051f974d2a04942b6eee7c3082d6
+MISC metadata.xml 1622 RMD160 01a46ab0aebc8acab07a5a874736783791b75c4e SHA1 c2869923f6e835df175a9a6f0d803170bf98fd85 SHA256 7875ea72b5aa0e9dd526c88692c08a3e1598e563d8e2d27e336fd1d5d707cb5c
