@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-lexbind-23.1.9999 (19 Dec 2009)
+
+  19 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
+  -emacs-lexbind-23.0.9999.ebuild, +emacs-lexbind-23.1.9999.ebuild,
+  metadata.xml:
+  Sync from Portage tree.
+
 *emacs-lexbind-23.0.9999 (09 Sep 2009)
 
   09 Sep 2009; Ulrich Mueller <ulm@gentoo.org>
